8198573: JShell: class replace loses instances
Reviewed-by: jlahoda